test/fail/file-import.mo
import (f : Nat) = "blob:file:../index.html";

